--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4a.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4a.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4a.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4a.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4a.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4a.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793154.md#1" target="_blank">思辨式写作：科技冷漠（上）</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793154.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_209874568_Subscription_L-150x120.jpg" align ="left"></a>我们将一起探讨网路时代下的冷漠与犯罪，训练判读表格的能力，并学习打磨立意高度、理解深化论述的方法，借此提高论述品质。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:48 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/8/n11777580.md#1" target="_blank">清朝人果报见闻：天网恢恢 疏而不漏</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/8/n11777580.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/432127144-e1574145808226-150x120.jpg" align ="left"></a>这世上到底有没有因果报应，古往今来许多故事都给予了肯定的答案，只是对于一些人，特别是受现代无神论影响以及信奉眼见为实的人而言，因为没有发生在自己身上，所以依旧拒绝相信。不过，这部分人中应该有一些看过曾在大陆流行的关于清代大文人纪晓岚的电视剧，而这位大文人不仅在年幼之时可以看到另外空间，而且在长大后还写了一本书《阅微草堂.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 12:27 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792313.md#1" target="_blank">【馨香雅句】人心惟危 道心惟微</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11792313.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/d601abd4f23a768a923005dfa5e657f6-150x120.jpg" align ="left"></a>中国的文化根源于佛家、道家和儒家。像我们的先祖黄帝，他曾问道于广成子，最终得道，道家文化讲说真话办真事，最终返本归真…......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793079.md#1" target="_blank">【看川普推特学英文】保卫美国人 川普下令击毙伊朗军头</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793079.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1198272311-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="President Trump Addresses The Nation After Iranian Attacks In Iraq Target Bases Where U.S. Troops Stationed WASHINGTON, DC - JANUARY 08: With a portrait of former U.S. President George W. Bush hanging in the Grand Foyer (R), President Donald Trump speaks from the White House January 08, 2020 in Washington, DC. During his remarks Trump addressed the Iranian missile attacks that took place last night in Iraq. (Photo by Chip Somodevilla/Getty Images)" align ="left"></a>美国总统川普因为下令击杀伊朗高阶将领，同时也是头号恐怖份子领袖苏雷曼尼（Qassem Soleimani），造成近日美伊两国的情势一度紧张。美国防部发出声明，为确保美国人民与美国安全，甚至全球利益，美国须采取必要行动！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 11:29 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/8/n11777558.md#1" target="_blank">被孟子誉为“和圣” 坐怀不乱柳下惠</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/8/n11777558.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/32afeef571fc2fb66f5f5554b993ea38-150x120.jpg" align ="left"></a>柳下惠本姓展，名获，字子禽，出身鲁国公族，是鲁孝公的五世孙。公元前720年11月18日午时，展子禽降生在鲁国的柳下邑（今属山东省济宁市邹城）。当时天象异常，火光入室，文鸟起舞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 11:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11781319.md#1" target="_blank">盘点那些与帝王将相有关的美食（下）</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11781319.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_1492890137-150x120.jpg" align ="left"></a>中国的饮食文化渊源流长，承载着各地的风土人情、历史人文、烹饪特色、味蕾喜好和乡愁记忆……那些被老百姓以美食的方式纪念颂扬的圣皇名臣，流芳百世，家喻户晓；那些被帝王将相亲自品尝、称赞推荐的佳肴，不断发扬光大，代代相传，具有千年不衰的强大生命力，广受民众欢迎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 4:20 PM			</td></tr>
@@ -20,13 +23,6 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/11/n11784256.md#1" target="_blank">豆花</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/11/n11784256.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_1540148243-150x120.jpg" align ="left"></a>“从港岛到新界，从快餐到慢食，在这里六年了，两千多个日子的漫游，我听我看，我书写我揣想，并且记住，其中的甜美与酸涩，酿出的温暖与辛香，杂揉的文化与滋味，交织的呐喊与风景”──杨明......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 11:37 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11781751.md#1" target="_blank">天地清明引(165) 东流水－各方摊牌1</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/10/n11781751.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/8f686ba2bd0c3593a6afd717e72fa4c3-150x120.png" align ="left"></a>转眼半月已过，牡丹早落，独留秋菊，不畏清寒。昭雪独坐花园，目光凝然，若有所思。红缨摘了鲜菊花泡酒，抬头一看：“王爷吉祥！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/17/n11728419.md#1" target="_blank">【三国英雄】之九：屡遭劫持的汉献帝</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/17/n11728419.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/9-3-150x120.jpg" align ="left"></a>汉献帝出生丧母，九岁丧父，十岁连唯一的亲人哥哥也被杀了，到此为止，汉献帝就成了名符其实的孤儿了，身边只有一个凶神恶煞的董卓。公元190年，董卓带着年仅九岁的汉献帝西迁至长安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 5:11 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/11/n11785830.md#1" target="_blank">纪实散文：一夜惊梦（18）</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/11/n11785830.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1907161621212483-1-150x120.jpg" align ="left"></a>诉江大潮  听闻老T的传说
-
-2012年，习近平上位，遂即习王联手，雷霆反腐。活摘器官的幕后黑手周永康、薄熙来等一干贪官酷吏，如秋风落叶，一地狼藉，看似不可一世的庞然大物，弹指之间魂飞烟灭。
-
-2015年，最高法提出有案必立，诉江一案随即大潮涌起。江泽民贵为太上皇，权势熏天，爪牙遍地。但是这一纸诉状，却如震天惊.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 12:45 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/2/n11764133.md#1" target="_blank">妻子的情话：良人今夜醉何楼 龙泉宝剑难断相思</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/2/n11764133.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/02cd0c163e6ecddbd0d60a91758941cc-600x400-150x120.jpg" align ="left"></a>张氏满怀怨气，但也绝不口出恶言。她直诉对夫君的怀念，嗔怨带着浓情厚爱。短短诗文，有才情，有慧智，以点点滴滴演奏出美的乐章。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 5:11 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/11/n11784500.md#1" target="_blank">浮生行吟：哪里有问题</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/11/n11784500.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/08/1208041144332184-150x120.jpg" align ="left"></a>人们往往容易被惯性思维禁锢，而忘却最简单、最直接的关键。有时“问题”的棘手之处，并不在“问题”的本身；而是那个极力要解决“问题”者的想法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 3:14 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11788081.md#1" target="_blank">七律：人间较量</a><br></h3> 博弈财经余燹火， 抗争香港裂鸿沟。 中东挑衅移焦点， 背地支持是预谋。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/12/n11788113.md#1" target="_blank">七律：新元已启</a><br></h3> 纪元新岁已开头， 变幻风云恶未休。 簌簌有声肩雪落， 凄凄无语树禽愁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:14 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790520.md#1" target="_blank">神韵行（二十九）</a><br></h3>久怀慕蔺，来朝天国，一赌盛唐气象。 龙楼凤阙五云光，问是在、人间天上？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:19 PM			</td></tr>
