--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,14 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4a.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4a.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4a.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4a.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4a.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4a.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801155.md#1" target="_blank">澳洲参议员：法轮功为中国所有良心犯争人权</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801155.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/55a9f7232e4efea777aef08c98ebd744-150x120.jpg" align ="left"></a>澳洲法轮功学员于2019年9月16日再次把在澳洲各地征集的呼吁制止中共活摘器官暴行的签名提交给澳联邦政府并备案。从2009年11月开始提交第一批签名至今，澳洲法轮大法学会提交至联邦政府的同一内容征签表的签名总数累计为257,312。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 2:27 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803776.md#1" target="_blank">防武汉肺炎 加拿大三机场将进行筛查</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803776.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/03/1503131007072500-150x120.jpg" align ="left"></a>武汉爆发神秘肺炎并传播到邻近亚洲国家，引发国际关注。继美国三大机场对来自武汉的旅客进行筛查后，加拿大三大国际机场也开始对武汉旅客进行预防性筛查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 10:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803796.md#1" target="_blank">武汉肺炎内地扩散  深圳上海传出疑似病例</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803796.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/EOfsrUYVUAArpaj-150x120.jpg" align ="left"></a>综合外电报导，武汉新型肺炎已在中国大陆扩散，深圳市第三人民医院有两个疑似病例被隔离治疗，上海市也传出一个疑似病例正在接受治疗，但相关当局拒绝置评。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 10:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803564.md#1" target="_blank">红三代轧故宫发酵 后花园开到美国富人区</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803564.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/6aea2d8b7ab4d921ae52de4c1d6ac3a5.jpg" align ="left"></a>最新一起红三代大奔遛故宫的炫富事件，再次告诉中国人，无论是普通民众的家宅，还是旧日皇宫大院，如今都只是中共权贵予取予求的后花园。而网民们的追踪爆料则显示，中共高官们已把党的后花园开到了美国的富人区。
+
+讽刺的是，专职颠倒黑白、掩盖真相、为权贵洗地的中共喉舌，日前也发文怒斥豪车遛故宫是“特权养成的无知无畏”。
+
+党媒这种自扇耳光的举动，加上事件被“允许.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 9:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803448.md#1" target="_blank">人死7年仍在收钱 中共民政部募捐黑幕遭起底</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803448.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/f2416e0c35c13c5bed63693a9d7fbc01-150x120.jpg" align ="left"></a>贵州贫困女大学生吴花燕去世后，中共民政部旗下募捐平台的“敛财”内幕持续遭到起底。据陆媒日前披露，该募捐平台将重症患儿多次送往无资质的私立医院医治，有些患儿未得到捐款，有些死亡率极低疾病的患儿却离奇死亡，甚至很多患儿已经去世多年，该平台还在募捐。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 8:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803223.md#1" target="_blank">蓬佩奥对硅谷公司领袖讲话全文</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803223.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Screen-Shot-2020-01-18-at-2.50.05-PM-150x120.jpg" align ="left"></a>我曾在私营企业待过﹐我可以说﹐你们所做的是最根本和独一无二的现役服务。今天我还知道﹐我在向一个特殊的人群发表讲话。你们的创建人——大卫?帕柯德正体现了我们这个伟大国家的特别之处。他意识到美国梦是真实的﹐他体验了﹐他是一名爱国者。他知道美国的经济安全是企业身份的一部分。尼克松政府时期他曾担任国防部长和副部长﹐我那时还只是一名陆军上尉。帕柯德先生很不错﹐某一天我.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 8:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803438.md#1" target="_blank">中共特工美课堂搜集情报 中国留学生担忧</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803438.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Healy_Hall_at_Georgetown_University-150x120.jpg" align ="left"></a>尽管与北京相隔万里之遥，但美国的一些中国学生和中国研究教授表示，他们担心共产党的长臂正伸入美国课堂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 8:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803423.md#1" target="_blank">A股监狱风云续演 身家40亿实控人被捕</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803423.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Untitled-2-2-150x120.gif" align ="left"></a>2020年开始没到一个月，大陆又一家上市公司实控人“出事”，兰州民百（集团）股份有限公司（简称兰州民百）实控人朱宝良被抓，涉事公司背后的3.5万股民则苦不堪言。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 7:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803420.md#1" target="_blank">分析：佛州成中共间谍活动重点目标</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803420.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1510050922211770-600x400-150x120.jpg" align ="left"></a>美国佛罗里达州似成为中共间谍活动的靶心，一年多来该州发生多起中国公民闯进当地军事基地及海湖庄园禁区被捕事件，专家说，披露出的只是冰山一角。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 7:39 AM							</td></tr>
@@ -19,15 +29,9 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800815.md#1" target="_blank">分析：台湾大选带给中共哪些打击</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800815.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X5717-600x400-2-1-150x120.jpg" align ="left"></a>1月11日的台湾总统选举，表面上看是一场关于蔡英文与主要对手韩国瑜的对决，但海峡对岸的中共在这场选举中举足轻重。分析认为，蔡英文的压倒性胜利给北京为控制台湾所做出的侵略性努力带来了决定性打击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 9:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802910.md#1" target="_blank">贵州化工厂燃爆 天空被映红 居民急撤离</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802910.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Untitled-7-150x120.jpg" align ="left"></a>1月17日，贵州福泉一化工厂发生爆燃。大团火焰升腾而起，大片天空被映红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 8:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802498.md#1" target="_blank">湖南数十公民过年聚餐 多人遭当局禁止参加</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802498.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/EOe53J9UUAA4iX9-150x120.jpg" align ="left"></a>1月17日，湖南株州市数十名公民相约于过年前聚会，但多人遭到当局警告禁止参会，连聚会餐厅也被迫害取消了预订好了的宴席。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 7:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802037.md#1" target="_blank">中共监控学校 数千学生人脸识别数据遭泄漏</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802037.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/69ca86adf17851d1cf9bb617bdd28617-150x120.jpeg" align ="left"></a>一名研究人员发现，一个包括数千名儿童信息的中国人脸识别数据库存储在互联网上，却没有任何保护措施。这个消息再次引发有关中共学校监控和网络安全的问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 5:02 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802364.md#1" target="_blank">大陆收费公路欠债达5.7万亿</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802364.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/1024px-Looking_south_bound_down_the_Tullamarine_Freeway_at_Airport_West-150x120.jpg" align ="left"></a>中国拥有世界上最多的收费公路，但所收费用低不上花费速度，数据显示，大陆收费公路所欠债务已达5.7万亿人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 3:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801973.md#1" target="_blank">开豪车入故宫惹议 “露小宝”自称是红三代</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801973.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2-16-150x120.jpg" align ="left"></a>日前，一组“露小宝开豪车进故宫”的照片引发轩然大波。据悉，其中一名女子叫高露，是中共元老何长工的孙媳妇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 3:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802040.md#1" target="_blank">袁斌：中美贸易战，中共认怂的谜底在这里</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802040.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6KR-2-600x400-1-1-150x120.jpg" align ="left"></a>中美贸易战开战以来，面对美国强大的关税攻势，嘴硬的中共多次表示奉陪到底，“绝不惧怕贸易战，有信心、有能力应对任何挑战”，中共驻美大使崔天凯甚至扬言：“如果有人想来硬的，我们一定会奉陪，看谁能坚持得更久。”结果呢，现在还不是乖乖的认怂服输，跟美国签了约，虽然目前只是第一阶段的协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 1:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801989.md#1" target="_blank">江西现史上罕见夏秋冬连旱 552万人受灾</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801989.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1t-g-150x120.jpg" align ="left"></a>长江中下游中部的江西省，2019年出现了历史罕见的夏秋冬连续旱情，目前仍在持续。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 12:20 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801925.md#1" target="_blank">拥抱台湾 捷克海盗党欲扭转总统亲共政策</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801925.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001172123582378-150x120.jpg" align ="left"></a>捷克首都布拉格弃北京改与台北结为姐妹市，在幕后主导的海盗党议员克劳斯娃表示，愈来愈多捷克人对中共失去好感，她希望借机扭转总统齐曼的亲共政策。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 11:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801522.md#1" target="_blank">“一带一路”企业再爆雷 半年违约60亿</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801522.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1903161216022190-150x120.jpg" align ="left"></a>安徽省外经建设（集团）有限公司（安徽外经建设）发生5亿元（人民币，下同）中期票据利息违约，这是该公司自去年7月份以来第5次违约，涉及本金共约60亿元。这也是又一个涉及中共“一带一路”的违约企业。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 9:41 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804070.md#1" target="_blank">江西七个月大婴儿灌肠治咳嗽后夭折</a><br></h3>1月13日，江西李先生七个月大的儿子咳嗽，被带到家附近的门诊部医治。14日，医生为男婴进行了两次灌肠，次日，男婴身亡。李先生表示，为孩子治疗的医生和从业资格证上的名字不符，且给孩子灌肠的护士也没有相关从业资格。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 1:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803788.md#1" target="_blank">中共军委政法委书记换人</a><br></h3>中共中央军委政法委书记换人，原军委政法委副书记王仁华接替宋丹，出任军委政法委书记。宋丹已年满63岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 12:26 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11803815.md#1" target="_blank">每日三退声明精选（2020/01/18）</a><br></h3>一时无知，被这个党的假像蒙蔽，从此误入尘网中，一去二十年。如今，对这个党的无耻行径心知肚明，但无奈肉身在墙内，只好借贵宝地表达一份决定，与这个党离心离德，分道扬镳。本人（化名断流）声明退出此党，从此清白干净做人，不愿同流合污。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 10:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802724.md#1" target="_blank">业绩预告频爆雷 大陆数家公司共亏损70亿</a><br></h3>大陆上市公司陆续公布年度业绩报告。1月17日晚间，科大智能、ST柳化等数家上市公司曝出业绩大雷，亏损金额合计已超过70亿元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 6:33 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802036.md#1" target="_blank">【翻墙必看】接班人问题是中共权力更替的死穴</a><br></h3>近期中共党媒透露，习近平讲话谈到“国家领导层更替”问题。纽约时报发表文章说，中共党内斗争极其残酷无情，特别是权力更替期，毛最终败于他一手制造出来的接班人困局，现任中共领导人能规避毛那样的结局吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 5:42 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802417.md#1" target="_blank">武汉新增4起新型肺炎病例 全数转院隔离</a><br></h3>目前，武汉新型冠状病毒感染的肺炎病例新增加4例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 3:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/crlhi259/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/crlhi259/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
